--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ material = "1.13.0"
 activity = "1.12.3"
 constraintlayout = "2.2.1"
 glideV = "5.0.5"
+retrofitV = "3.0.0"
+retrofitConverterV = "3.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -21,6 +23,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glideV" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitV"}
+converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofitConverterV" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
